changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Initial import of Crossfire Resource Editor, tool to manage various resources like
artifacts, archetypes, faces, animations, treasures.
For now it only lets the user view, but edition is planned.
This is a C++/Qt program, not part of the regular build system.
 utils/cre/*cpp *h: CRE files.
Nicolas Weeger 2008-11-08

Rename map's 'template' field which conflicts with C++ compilers.
Also change 'region' and 'shopitems' in some structures to the underlying structure
instead of the typedef, for the same confusion reason.
 common/anim.c map.c
 include/map.h
 random_maps/random_map.h
 server/server.c swap.c
Nicolas Weeger 2008-11-08

Tentative fix for bug #2018391: Zero-cap or capless containers, also stacking containers.
Split containers when reading/applying them (coherent with eg rings when applied).
Also ensure that a sack is split when putting things into it anyway.
 include/sproto.h: function now visible to others.
 server/apply.c c_object.c: split containers
 socket/item.c: don't crash if object isn't a player.
 test/unit/server/check_c_object.c: write some tests for put_object_in_sack().
Nicolas Weeger 2008-10-31

Fix for bug #2081472: short int encoding for food value in payment altars.
 include/living.h object.h: make food and last_eat sint32 so no overflow.
Nicolas Weeger 2008-10-31

Fix for bug #2140899: crash server by reading scroll on ground.
 types/scroll/scroll.c: keep scroll's inventory name in case inventory
  is removed.
Nicolas Weeger 2008-10-05

Add a function called tempnam_secure(), unlike the old tempnam_local() it should